# markerless

./: .gitignore  CMakeLists.txt  README.md
include/: abstractopencvrunnablefilter.h  cameracalibration.h  markerdetectorfilter.h  pattern.h  patterndetector.h  patterndetectorfilter.h
resource/: Author.qml  Dubliners.qml  Eliot.qml  IlFuMattiaPascal.qml  Joyce.qml  Pirandello.qml  Plot.qml  SimilarAuthor.qml  SuggestedNovel.qml  Summary.qml  main.qml  qml.qrc  qtquickcontrols2.conf
src/: abstractopencvrunnablefilter.cpp  cameracalibration.cpp  main.cpp  markerdetectorfilter.cpp  patterndetector.cpp  patterndetectorfilter.cpp
